# spectra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/spectra-calibration/: Cargo.toml
crates/spectra-calibration/src/: lib.rs  sweetspot.rs  uniformity.rs  viewing_angle.rs
crates/spectra-color/: Cargo.toml
crates/spectra-color/src/: calibration.rs  gamut.rs  hdr.rs  lib.rs
crates/spectra-core/: Cargo.toml
crates/spectra-core/src/: config.rs  framebuffer.rs  lib.rs  pipeline.rs
crates/spectra-panel/: Cargo.toml
crates/spectra-panel/src/: driver.rs  lib.rs  thermal.rs  tiling.rs
docs/: architecture.md
python/: pyproject.toml
python/spectra/: __init__.py  client.py
python/spectra/tools/: __init__.py  diagnostics.py  mastering.py
