[workspace]
resolver = "2"
members = [
    "crates/spectra-core",
    "crates/spectra-color",
    "crates/spectra-panel",
    "crates/spectra-calibration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sylvain-cinema/spectra"
authors = ["Sylvain Technologies <engineering@sylvain.tech>"]

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
nalgebra = "0.33"
